# claudia

./: .gitignore  api.py  audio_stream.py  config.py  main.py  openrouter.py  option_generator.py  persona.py  pyproject.toml  store.py  symbol_search.py  transcriber.py  translator.py  utterance.py
backend/: .gitignore  pyproject.toml
backend/scripts/: mock_client.py
backend/src/claudia/: api.py  audio_stream.py  config.py  db.py  embedder.py  main.py  models.py  openrouter.py  option_generator.py  persona.py  store.py  symbol_search.py  transcriber.py  translator.py  utterance.py  vad.py
backend/src/claudia/indexing/: arasaac.py  core_words.txt  describe.py  seed.py
backend/tests/: conftest.py  test_api.py  test_arasaac.py  test_audio_stream.py  test_batch_search.py  test_core_words.py  test_db.py  test_describe.py  test_embedder.py  test_import_root.py  test_integration.py  test_openrouter.py  test_option_generator.py  test_persona.py  test_retrieval_eval.py  test_seed.py  test_smoke.py  test_store.py  test_symbol_search.py  test_transcriber.py  test_translator.py  test_utterance.py
backend/tests/fixtures/: recall_set.json
docs/: 2026-06-20-aac-symbol-translator-design.md  2026-06-21-audio-symbol-translator-implementation-plan.md  2026-06-21-frontend-prototype-implementation-plan.md  api-contract.md  frontend-setup.md
frontend/: .env.example  index.html  package-lock.json  package.json  styles.css  tsconfig.app.json  vite.config.ts  vitest.config.js
indexing/: seed.py
tests/: conftest.py  test_api.py  test_arasaac.py  test_audio_stream.py  test_db.py  (+16 more)
(+58 files in other folders)
