[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claudia"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "silero-vad>=5.1",          # the VAD (pulls torch); we do not hand-roll detection
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
claudia = "claudia.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claudia = ["indexing/core_words.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
